# cs377-k4ball-search-rl

./: .gitignore  LICENSE  README.md  pyproject.toml
billiards/: __init__.py  inning_env.py
billiards/physics/: state.py
billiards/wrappers/: __init__.py  action_stage_env.py  curriculum_start_env.py  scoring_potential_rm_env.py  vsa_rm_env.py
experiments/: build_v_sa_rm.py  eval_policy.py  run_inning_action_curriculum.py  run_inning_curriculum.py  run_inning_random.py  run_inning_sac.py  run_inning_sacrm.py  run_inning_sacrm_sa.py  search_multiseed_h2.py  summarize_domain_knowledge.py
