[project]
name = "k4ball-search-rl"
version = "1.0.0"
description = "Korean 4-ball billiards: a continuous, deterministic, sparse-reward RL benchmark solved by inference-time search"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "gymnasium>=0.29",
    "torch>=2.1",
    "stable-baselines3>=2.3",
    "pandas>=2.0",
    "pyarrow>=15.0",
    "tqdm>=4.66",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["billiards"]
